22/Create the App.java class (#23)
* feat: Configure app.java and launch the loginpage.fxml

* fix: adding compatibility for windows in VSCode